kafka/cmak/kubernetes/cmak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cmak-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cmak.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cmak
                port:
                  number: 9000
